Convert all to kotlin